fix: differentiate between new and learned words
